Implements DetunedVoiceBank, LowPassFilter and start EnvelopeFilter

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,11 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ],
-  "paths": {
-    "@/*": ["src/*"],
-    "assets/*":["public/assets"]
+    "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "$lib": ["./src/lib"],
+      "$lib/*": ["./src/lib/*"]
+    }
   }
 }
